# fakepull

./: .gitignore  ChangeLog.md  README.md  fakepull.cabal  run-example.sh  stack.yaml
src/Test/Pull/Fake/: IO.hs  Pure.hs
test/: Spec.hs
