cabal-version: 2.2

name:           fakepull
version:        0.3.0.1
synopsis:       Monad to pull from fake stream-like objects.
description:    See <https://github.com/igrep/haskell-fakepull#readme>.

homepage:       https://github.com/igrep/haskell-fakepull#readme
bug-reports:    https://github.com/igrep/haskell-fakepull/issues
author:         YAMAMOTO Yuji
maintainer:     whosekiteneverfly@gmail.com
copyright:      2020 Yuji Yamamoto
license:        Apache-2.0
license-file:   LICENSE
category:       Testing
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/igrep/haskell-fakepull

library
  exposed-modules:
      Test.Pull.Fake.Pure
      -- Test.Pull.Fake.IO
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , exceptions
    , mtl
    , containers
  default-language: Haskell2010

test-suite fakepull-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , fakepull
    , exceptions
    , containers
    , hspec
    , QuickCheck
  default-language: Haskell2010
